<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="190dp"
    android:layout_height="300dp"
    android:layout_gravity="end"
    android:layout_margin="4dp"
    android:backgroundTint="#ffffff"
    android:elevation="12dp"
    app:cardCornerRadius="6dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imgProductSeasonBestSale"
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:layout_margin="4dp"
            android:elevation="4dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtProductTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/productTitle"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgProductSeasonBestSale" />

        <TextView
            android:id="@+id/txtSeasonSalePrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="4dp"
            android:text="@string/price"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtProductTitle" />

        <Button
            android:id="@+id/btnAddToBasket"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_margin="2dp"
            android:backgroundTint="@color/primaryDarkColor"
            android:shadowRadius="1"
            android:text="@string/addToButton"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cornerRadius="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtSeasonSalePrice" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>