<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.DetailsActivity"
    android:background="@color/lightPrimary">
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolBarBasket"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/details"
            android:textColor="@color/black"
            android:textSize="24sp" />
    </com.google.android.material.appbar.MaterialToolbar>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolBarBasket">

        <LinearLayout
            android:id="@+id/detailsLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewImage"
                android:layout_width="250dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                app:cardCornerRadius="6dp"
                android:elevation="4dp"
                android:backgroundTint="@color/lightPrimary">

                <ImageView
                    android:id="@+id/imgProductDetail"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_gravity="end"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/ic_launcher_background" />
            </androidx.cardview.widget.CardView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/txtTitle"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_margin="6dp"
                    android:padding="12dp"
                    android:paddingEnd="12dp"
                    android:text="@string/productTitle"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/txtBestSalePrice"
                        android:layout_width="190dp"
                        android:layout_height="80dp"
                        android:layout_margin="6dp"
                        android:padding="12dp"
                        android:paddingEnd="12dp"
                        android:text="@string/bestPrice"
                        android:gravity="center"
                        android:layout_gravity="start"
                        android:textColor="@color/red"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/txtPrice"
                        android:layout_width="190dp"
                        android:layout_height="80dp"
                        android:layout_margin="6dp"
                        android:layout_gravity="end"
                        android:padding="12dp"
                        android:paddingEnd="12dp"
                        android:text="@string/price"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>
            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewMapView"
                android:layout_width="380dp"
                android:layout_height="230dp"
                android:elevation="8dp"
                app:cardCornerRadius="2dp"
                android:layout_margin="6dp"
                android:layout_gravity="center">

                <com.mapbox.mapboxsdk.maps.MapView
                    android:id="@+id/MapViewDetail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:mapbox_cameraZoom="0"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>