<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragmentContainer">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarMain"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:contentInsetStart="0dp"
        android:contentInsetLeft="0dp"
        android:contentInsetEnd="0dp"
        android:contentInsetRight="0dp"
        app:contentInsetEnd="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetStart="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/white">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/baseTitle"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginEnd="12dp"/>
            <ImageView
                android:id="@+id/imgBasket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:src="@drawable/ic_shopping_basket"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="24dp"
                android:layout_marginBottom="12dp"
                app:layout_constraintBottom_toBottomOf="@+id/imgBasket"
                app:layout_constraintEnd_toEndOf="@+id/imgBasket"
                app:layout_constraintStart_toStartOf="@+id/imgBasket"
                app:layout_constraintTop_toTopOf="@+id/imgBasket"
                app:srcCompat="@drawable/circle" />

            <com.daasuu.cat.CountAnimationTextView
                android:id="@+id/txtCountAnimation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="2dp"
                android:clickable="false"
                android:text="@string/countNumber"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/imageView"
                app:layout_constraintEnd_toEndOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="@+id/imageView" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarMain"
        tools:ignore="SpeakableTextPresentCheck"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewSlider"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:layout_margin="4dp"
                android:elevation="6dp"
                app:cardCornerRadius="10dp">

                <ss.com.bannerslider.Slider
                    android:id="@+id/sliderMain"
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    app:slider_animateIndicators="true"
                    app:slider_interval="2000" />
            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/bestSale"
                android:textAlignment="center"
                android:gravity="center"
                android:textSize="22sp"
                android:layout_margin="4dp"
                android:textStyle="bold"
                android:textColor="@color/secondaryDarkColor"/>
            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewBestSale"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:layout_margin="2dp"
                android:elevation="6dp"
                app:cardCornerRadius="8dp"
                android:backgroundTint="@color/primaryColor"
                android:animateLayoutChanges="true">
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerViewBestSale"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />
            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/seasonSale"
                android:textSize="22sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_gravity="end"/>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="6dp"
                app:cardCornerRadius="8dp"
                android:backgroundTint="@color/white">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewSeasonBestSale"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:orientation="vertical"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>